[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "rusty"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
debug = false
strip = "symbols"
